--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -7,8 +7,10 @@
       autocomplete="off"
       placeholder="Search images..."
     />
-    <button class="search-btn" type="submit">Search</button>
+    <button class="search-btn button-general" type="submit">Search</button>
   </form>
 </div>
 <div class="gallery"></div>
-<button type="button" class="load-more">Load more</button>
+<button type="button" class="load-more is-hidden button-general">
+  Load more
+</button>
