--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -1,18 +1,20 @@
 .header {
-  //   height: 100px;
+  display: flex;
   width: 100vw;
+  justify-content: center;
+  align-items: center;
 
   padding-top: 20px;
   padding-bottom: 20px;
   margin-bottom: 25px;
   background-color: aqua;
-
-  text-align: center;
 }
 
 .search-input {
+  height: 35px;
   border-radius: 5px;
-  border-color: gray;
+  border-color: #2196f3;
+  outline: none;
 }
 
 .search-input:focus {
@@ -20,14 +22,29 @@
   border-color: rgb(0, 72, 255);
 }
 
-.search-btn {
-  border-radius: 5px;
-  border-color: gray;
-}
+.button-general {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.88;
+  color: #ffffff;
+  letter-spacing: 0.06em;
 
-.search-btn:hover,
-.search-btn:focus {
-  border-color: rgb(0, 72, 255);
+  background-color: #2196f3;
+  cursor: pointer;
+
+  padding: 5px 20px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+  border-radius: 4px;
+  min-width: 100px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: #188ce8;
+  }
 }
 
 .load-more {
@@ -36,30 +53,31 @@
   margin: 10px auto;
 }
 
-.load-more:hover,
-.load-more:focus {
-  border-color: rgb(0, 72, 255);
-}
-
 .load-more.is-hidden {
-  overflow: hidden;
+  visibility: hidden;
 }
 
 .gallery {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: start;
   align-items: start;
-  gap: 15px;
-  width: 80vw;
+  gap: 20px;
+  width: 1200px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.photo-card {
+  flex-basis: 285px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .photo-image {
   display: block;
   object-fit: cover;
-  width: 300px;
+  width: 100%;
   height: 150px;
   margin-bottom: 10px;
   flex-grow: 1;
