--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -1,12 +1,14 @@
 <div class="header">
   <form class="search-form" id="search-form">
-    <input
-      class="search-input"
-      type="text"
-      name="searchQuery"
-      autocomplete="off"
-      placeholder="Search images..."
-    />
+    <div class="search-view">
+      <input
+        class="search-input"
+        type="text"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Search images..."
+      />
+    </div>
     <button class="search-btn button-general" type="submit">Search</button>
   </form>
 </div>
