--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -1,31 +1,50 @@
 .header {
   display: flex;
-  width: 100vw;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 
-  padding-top: 20px;
-  padding-bottom: 20px;
-  margin-bottom: 25px;
-  background-color: aqua;
+  font-weight: 700;
+  font-size: 1.2rem;
+
+  margin-top: 0;
+  margin-right: 0;
+  margin-bottom: 20px;
+  margin-left: 0;
+  padding-top: 30px;
+  padding-bottom: 30px;
+
+  box-shadow: 0 0 35px 0 rgb(196, 194, 194);
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.search-view {
+  border: 0.1rem solid transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.8rem;
+  box-shadow: 0 0 15px 0 rgb(161, 160, 160);
+  margin-right: 15px;
 }
 
 .search-input {
-  height: 35px;
-  border-radius: 5px;
-  border-color: #2196f3;
-  outline: none;
-}
-
-.search-input:focus {
-  outline: none;
-  border-color: rgb(0, 72, 255);
+  width: 100%;
+  height: 100%;
+  border: 0;
+  outline: 0;
+  padding: 0.5rem;
+  border-radius: 0.8rem;
 }
 
 .button-general {
   font-family: inherit;
   font-weight: 500;
-  font-size: 14px;
+  font-size: inherit;
   line-height: 1.88;
   color: #ffffff;
   letter-spacing: 0.06em;
@@ -33,10 +52,10 @@
   background-color: #2196f3;
   cursor: pointer;
 
-  padding: 5px 20px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  padding: 3px 20px;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.15);
   border: none;
-  border-radius: 4px;
+  border-radius: 0.8rem;
   min-width: 100px;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
